@@ -116,7 +116,8 @@ $.Controller('Seccubus.Finding.Status',
 				this.view(
 					'init',
 					Seccubus.Models.Finding.findAll({
-						workspaceId	: this.options.workspace
+						workspaceId	: this.options.workspace,
+						scanIds		: this.options.scans
 					}),
 					{
 						fScans		: this.options.scans,
